tests/success/nested_loops.crema
int ints[] = [1,2,3]
foreach (ints as i)
{
  int a = i

  foreach (ints as j)
  {
    int a = j
  }
}
