tests/fail/loop_no_list.crema
int sum = 0
foreach(list as elem) {
  sum = sum + elem
}
